package taller;

public class Coche extends Vehiculo {

    public Coche(String matricula, String modelo) {
        super(matricula, modelo);
    }
}