package taller;

public interface Especialista {
    void reparar(Reparacion reparacion);
}
