package taller;

public class Moto extends Vehiculo {

    public Moto(String matricula, String modelo) {
        super(matricula, modelo);
    }
}